styles.css
/* TODO: blockquotes need a better fix */
.markdown-rendered .better-search-views-file-match > *, .better-search-views-file-match > *, .better-search-views-file-match > blockquote > p {
  margin-block-start: 0;
  margin-block-end: 0;
  white-space: normal;
}

.better-search-views-file-match > blockquote {
  margin-inline-start: 0;
  margin-inline-end: 0;
}

.better-search-views-file-match ul {
  padding-inline-start: var(--list-indent);
}

.better-search-views-file-match a {
  text-decoration: none;
  cursor: default;
}

.better-search-views-file-match ul {
  position: relative;
}

/* Copied from Obsidian */
.better-search-views-file-match li > ul::before {
  content: "\200B";
  position: absolute;
  display: block;
  left: -1em;
  top: 0;
  bottom: 0;
  border-right: var(--indentation-guide-width) solid var(--indentation-guide-color);
}

/*.embedded-backlinks .backlink-pane .tree-item-self*/
.better-search-views-breadcrumbs {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--background-modifier-border);
}

.better-search-views-tree-item-children {
  margin-left: 10px;
  padding-left: 10px;
  border-left: var(--nav-indentation-guide-width) solid var(--nav-indentation-guide-color);
}

.better-search-views-breadcrumb-container {
  display: flex;
  align-items: flex-start;
  gap: 0.5em;
}

.better-search-views-titles-container .tree-item-inner:not(:hover) {
  color: var(--text-muted);
}

.better-search-wrapper {
  padding: 5px;
}

.better-search-wrapper:not(:last-child) {
  border-bottom: 1px solid var(--background-modifier-border)
}

.search-result-file-matches:has(.better-search-views-tree) {
  font-size: var(--font-ui-smaller);
  line-height: var(--line-height-tight);
  background-color: revert;
  border-radius: var(--radius-s);
  overflow: hidden;
  color: var(--text-muted);
}

.search-result-file-matches:has(.better-search-views-tree), .better-search-views-tree .search-result-file-matches {
  margin: var(--size-4-1) 0 var(--size-4-1);
}

.tree-item.search-result > .search-result-file-matches:has(.better-search-views-tree) {
  box-shadow: none;
  /* This fixes box shadow in child match boxes */
  padding-right: 1px;
}

.search-result-file-matches:has(.better-search-views-tree) .better-search-views-file-match:not(:hover) {
  box-shadow: 0 0 0 1px var(--background-modifier-border);
  background-color: var(--search-result-background);
}

.better-context-icon {
  height: var(--icon-xs);
  width: var(--icon-xs);
  color: var(--text-faint);
}

.better-search-views-tree .tree-item-inner {
  display: flex;
  flex-direction: column;
  gap: 2px;
  flex-grow: 1;
  padding-top: 4px;
  padding-bottom: 4px;
  border-radius: var(--radius-s);
  /*box-shadow: 0 0 0 1px var(--background-modifier-border);*/
}

.better-search-views-tree blockquote {
  padding-left: 10px;
  border-left: var(--blockquote-border-thickness) solid var(--blockquote-border-color)
}

.better-search-views-tree .tree-item-inner:hover {
  background-color: var(--nav-item-background-hover);
}

.better-search-views-tree .search-result-file-title {
  /* TODO: this is still hardcoded */
  padding-left: calc(20px + var(--nav-indentation-guide-width));
  padding-right: 0;
}

body:not(.is-grabbing) .better-search-views-tree .tree-item-self.search-result-file-title:hover {
  background-color: var(--titlebar-background);
}

.better-search-views-tree .better-search-views-breadcrumb-container {
  padding-left: 4px;
  padding-right: 4px;
  flex-grow: 1;
}

.better-search-views-tree .better-search-views-breadcrumb-container:not(:last-child) {
  padding-bottom: 2px;
  border-bottom: var(--nav-indentation-guide-width) solid var(--nav-indentation-guide-color);
}

.better-search-views-breadcrumb-token {
  display: flex;
  align-items: center;
}

.better-search-views-tree .collapse-icon {
  padding-top: 4px;
  border-radius: var(--radius-s);
  padding-bottom: 2px;
  display: flex;
  align-items: flex-start;
  align-self: flex-start;
}

.better-search-views-tree .collapse-icon:hover {
  background-color: var(--nav-item-background-hover);
}

.better-search-views-titles-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

